--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,38 @@
+body{
+    background-image: url("https://o.aolcdn.com/images/dims3/GLOB/legacy_thumbnail/630x315/format/jpg/quality/85/http%3A%2F%2Fi.huffpost.com%2Fgen%2F4160780%2Fimages%2Fn-HEALTHY-FOOD-628x314.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .container{
-display: flex;
-flex-direction: column;
-flex: wrap;
-justify-content: center;
-align-items: center;
-border: solid 3px orange;
-font-size: 25px;
-line-height: 5;
-};
+display: content-box;
+width:75%;
+margin: auto;
+background: rgba(255, 255, 255, 0.644);
+text-align: center;
+line-height: 3;
+
+}
+
+#contents{
+    font-family: 'Srisakdi', cursive;
+    font-size: 30px;
+    color: rgb(9, 73, 9);
+}
+#head{
+    font-size:50px;
+
+}
+#quiz{
+    font-family: 'BenchNine', sans-serif;
+    color: rgb(9, 73, 9);
+    font-size: 30px;
+}
+#toggle{
+    background-color: rgb(223, 238, 20);
+    padding: 15px 32px;
+  text-align: center;
+  font-family: 'BenchNine', sans-serif;
+  font-size: 20px;
+  color: rgb(9, 73, 9);
+}
+
